--- a/Week-4-NPL-Deep-Learning.ipynb
+++ b/Week-4-NPL-Deep-Learning.ipynb
@@ -2265,8 +2265,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters found:  {'hidden_units': 128, 'activation': 'tanh'}\n",
-      "Best F1 score: 0.6010\n"
+      "Best parameters:  {'hidden_units': 128, 'activation': 'tanh'}\n",
+      "Best F1: 0.6010\n"
      ]
     }
    ],
@@ -2286,8 +2286,8 @@
     "\n",
     "random_search.fit(X_train, y_train)\n",
     "\n",
-    "print(\"Best parameters found: \", random_search.best_params_)\n",
-    "print(\"Best F1 score: {:.4f}\".format(random_search.best_score_))\n",
+    "print(\"Best parameters: \", random_search.best_params_)\n",
+    "print(\"Best F1: {:.4f}\".format(random_search.best_score_))\n",
     "\n"
    ]
   },
